@@ -216,10 +216,3 @@ runNMDS <- function(x, ..., altexp = NULL, name = "NMDS") {
     reducedDim(x, name) <- calculateNMDS(y, ...)
     x
 }
-
-#' @rdname runNMDS
-#' @export
-plotNMDS <- function(x, ..., ncomponents = 2){
-    plotReducedDim(x, ncomponents = ncomponents, dimred = "NMDS",
-                   ...)
-}
